<resources>
    <string name="app_name">elsaFinal</string>
    <string name="header">Burrito / Taco Builder</string>
    <string name="location">Food near:</string>
    <string-array name="places">
        <item name="nothing">-</item>
        <item name="hill">The Hill</item>
        <item name="street">29th St</item>
        <item name="pearl">Pearl St</item>
    </string-array>
    <string name="type">Choose:</string>
    <string name="burrito">Burrito</string>
    <string name="taco">Taco</string>
    <string name="toppings">Select Toppings:</string>
    <string name="salsa">Salsa</string>
    <string name="cream">Sour Cream</string>
    <string name="cheese">Cheese</string>
    <string name="guacamole">Guacamole</string>
    <string name="build">BUILD</string>
    <string name="find">FIND PLACE</string>
    <string name="header2">Here is  your location!</string>
    <string name="website">WEBSITE</string>
</resources>
